# LHI incident 추가

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -7,7 +7,7 @@ html
         meta(name='google-site-verification', content='8dL8-JtafRwPb9mqiolYLGX-gJQ6iWrzWrHkZRnE2Uo')
         link(rel='stylesheet', href='/vendor/bootstrap-3.3.7/css/bootstrap.min.css')
         link(rel='stylesheet', href='/vendor/bootstrap-3.3.7/css/bootstrap-theme.min.css')
-        link(rel='stylesheet', href='/isu/css/isu.css')
+        link(rel='stylesheet', href='/isu/css/login.css')
         script(src='/vendor/jquery/jquery.js')
         script(src='/vendor/bootstrap-3.3.7/js/bootstrap.min.js')
         script(src='/isu/js/index.js')
@@ -60,9 +60,9 @@ html
                         hr
                         img(src='/isu/image/isusystem_logo.jpg', alt='ISU SYSTEM')
                         p
-                            | 06575) 서울시 서초구 사평대로 84
+                            |06575) 서울시 서초구 사평대로 84
                         p
-                            | .copyright COPYRIGHT ISU SYSTEM Co. Ltd. ALL RIGHT RESERVED.
+                            |.copyright COPYRIGHT ISU SYSTEM Co. Ltd. ALL RIGHT RESERVED.
 
         //찾아오는 길
         #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
@@ -71,7 +71,7 @@ html
                     .modal-header
                         button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
                         h4#myModalLabel.text-primary 
-                            찾아오시는 길
+                            |찾아오시는 길
                     .modal-body         
                         #container(style='margin-top: 0px;')
                             .sub_content                                    
@@ -83,9 +83,9 @@ html
                                             img(src='/isu/image/cus03.png', alt='자가용 이용시')
                                         .col-md-9
                                             h4.text-point
-                                                자가용 이용 시
+                                                |자가용 이용 시
                                             p.text-default 
-                                                팔레스 호텔 방면에서 오시면 반포전화국 앞에서 유턴가능. 건물 내 지하주하장 이용
+                                                |팔레스 호텔 방면에서 오시면 반포전화국 앞에서 유턴가능. 건물 내 지하주하장 이용
                                 hr
                                 .cus-con
                                     .row
@@ -93,20 +93,20 @@ html
                                             img(src='/isu/image/cus04.png', alt='지하철 이용시')
                                         .col-md-9
                                             h4.text-point 
-                                                지하철 이용 시
+                                                |지하철 이용 시
                                             p.text-default
                                                 span.text-green
-                                                    | 2호선 
+                                                    |2호선 
                                                 서초역 강남성모병원 7번 출구 → 21번 마을버스 → 반포전화국 하차
                                             p.text-default
                                                 span.text-blue
-                                                    | 4호선 
-                                                총신대역 신세대웨딩홀 1번 출구 → 14번 마을버스 → 이수화학 빌딩
+                                                    |4호선 
+                                                |총신대역 신세대웨딩홀 1번 출구 → 14번 마을버스 → 이수화학 빌딩
                                             p.text-default
                                                 span.text-brown
-                                                    | 9호선
-                                                신반포역 반포종합운동장 4번 출구 → 10번/14번 마을버스 → 반포전화국 하차
+                                                    |9호선
+                                                |신반포역 반포종합운동장 4번 출구 → 10번/14번 마을버스 → 반포전화국 하차
                                             p.text-default   
                                                 span.text-orange
-                                                    | 3/7/9호선 
-                                                고속버스터미널역 고속버스터미널역 8-1번 출구 → 10번/14번 마을버스 → 반포전화국 하차
+                                                    |3/7/9호선 
+                                                |고속버스터미널역 고속버스터미널역 8-1번 출구 → 10번/14번 마을버스 → 반포전화국 하차
