--- a/app/views/question/new.jade
+++ b/app/views/question/new.jade
@@ -1,4 +1,11 @@
 extends ../layouts/default
+block head
+        link(href='/vendor/fileupload/css/fileinput.css', media='all', rel='stylesheet', type='text/css')
+        link(href='/vendor/fileupload/themes/explorer/theme.css', media='all', rel='stylesheet', type='text/css')
+        script(src='/vendor/fileupload/js/plugins/sortable.js', type='text/javascript')
+        script(src='/vendor/fileupload/js/fileinput.js', type='text/javascript')
+        script(src='/vendor/fileupload/js/locales/kr.js', type='text/javascript')
+        script(src='/vendor/fileupload/themes/explorer/theme.js', type='text/javascript')
 
 block content
     .masthead.clearfix
@@ -26,6 +33,17 @@ block content
                     input.form-control.input-lg(type='hidden'  name='etcInfo[name]' value='Mr.Lee')
                 .form-group
                     input.form-control.input-lg(type='hidden'  name='etcInfo[age]' value='22')
-   
-   
-   
+
+            form(enctype='multipart/form-data')
+                hr
+                .form-group
+                input#attach-file.file(name='file-fr[]', type='file', multiple='')
+                hr  
+            script.
+                $('#attach-file').fileinput({
+                    language: 'ko',
+                    uploadUrl: '#',
+                    overwriteInitial: false,
+                    maxFileSize: 1000,
+                    maxFilesNum: 10
+                    });
