--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -12,11 +12,17 @@ html
         link(type='text/css', href='/vendor/font-awesome/css/font-awesome.min.css', rel='stylesheet')        
         link(href='/layouts/sb-admin-2.css', rel='stylesheet')
         link(href='/vendor/metisMenu/metisMenu.min.css', rel='stylesheet')
+        link(href='/vendor/morrisjs/morris.css', rel='stylesheet')
         script(src='/vendor/jquery/jquery.min.js')
         script(src='/vendor/bootstrap-3.3.7/js/bootstrap.min.js')  
         script(src='/layouts/sb-admin-2.js')
         script(src='/vendor/raphael/raphael.min.js')
         script(src='/vendor/metisMenu/metisMenu.min.js')
+        script(src='/vendor/morrisjs/morris.min.js')
+
+        //추후 삭제(도표 표시용)
+        script(src='/data/morris-data.js')
+        script(src='/data/flot-data.js')
 
     body
         - if(true){ //외부사용자
