--- a/app/views/incident/new.jade
+++ b/app/views/incident/new.jade
@@ -7,7 +7,7 @@ block head
         script(src='/vendor/fileupload/js/fileinput.js', type='text/javascript')
         script(src='/vendor/fileupload/js/locales/kr.js', type='text/javascript')
         script(src='/vendor/fileupload/themes/explorer/theme.js', type='text/javascript')
-        //script(src='/isu/js/incident/index.js', type='text/javascript')
+        script(src='/isu/js/incident/index.js', type='text/javascript')
 
 block content
     .content
@@ -53,46 +53,6 @@ block content
                         .col-xs-12.col-sm-10.col-md-8
                             form(enctype='multipart/form-data')
                                 .form-group
-                                input#attach-file.file(name='file-fr[]', type='file', multiple='')
+                                input#attach-file.file(name='file-fr[]', data-upload-url='#', type='file', multiple='')
                                 hr   
-
-            script.
-                $(document).ready(function () {
-                    $(".btn-select").each(function (e) {
-                        var value = $(this).find("ul li.selected").html();
-                        if (value != undefined) {
-                            $(this).find(".btn-select-input").val(value);
-                            $(this).find(".btn-select-value").html(value);
-                        }
-                    });
-                });
-
-                $(document).on('click', '.btn-select', function (e) {
-                    e.preventDefault();
-                    var ul = $(this).find("ul");
-                    if ($(this).hasClass("active")) {
-                        if (ul.find("li").is(e.target)) {
-                            var target = $(e.target);
-                            target.addClass("selected").siblings().removeClass("selected");
-                            var value = target.html();
-                            $(this).find(".btn-select-input").val(value);
-                            $(this).find(".btn-select-value").html(value);
-                        }
-                        ul.hide();
-                        $(this).removeClass("active");
-                    }
-                    else {
-                        $('.btn-select').not(this).each(function () {
-                            $(this).removeClass("active").find("ul").hide();
-                        });
-                        ul.slideDown(300);
-                        $(this).addClass("active");
-                    }
-                });
-
-                $(document).on('click', function (e) {
-                    var target = $(e.target).closest(".btn-select");
-                    if (!target.length) {
-                        $(".btn-select").removeClass("active").find("ul").hide();
-                    }
-                });  
+     
