--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -135,7 +135,7 @@ html
                                         li
                                             a(href='#') 하위업무조회
                                         li
-                                            a(href='#') 회사정보관리(외부)
+                                            a(href='/company/list') 회사정보관리(외부)
                                         li
                                             a(href='/usermanage/') 사원정보관리(내외)
                                         li
