--- a/app/views/company/show.jade
+++ b/app/views/company/show.jade
@@ -13,7 +13,7 @@ block content
             h3.masthead-brand 조회
             br
             div
-            button.btn.btn-primary.btn-signup(onclick="location.href=history.go(-1)") Back
+            button.btn.btn-primary.btn-signup(onclick="location.href='/company/list'") List
             button.btn.btn-primary.btn-info(onclick="location.href='/company/#{company._id}/edit'") Edit
             button.btn.btn-primary.btn-danger(onclick="location.href='/company/#{company._id}/delete'") Delete
             h3
@@ -23,38 +23,38 @@ block content
                         .form-group
                         label.col-sm-3.control-label(for='example-input-small')
                         .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[com_cd]', value='#{company.com_cd}') 
+                            input#example-input-small.form-control.input-sm(type='text', name='company[com_cd]', readonly value='#{company.com_cd}') 
                         .form-group
                         label.col-sm-3.control-label(for='example-input-small') 
                         .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[com_nm]', value='#{company.com_nm}')
+                            input#example-input-small.form-control.input-sm(type='text', name='company[com_nm]', readonly value='#{company.com_nm}')
                         .form-group
                         label.col-sm-3.control-label(for='example-input-small')
                         .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[ceo_nm]', value='#{company.ceo_nm}')
+                            input#example-input-small.form-control.input-sm(type='text', name='company[ceo_nm]', readonly value='#{company.ceo_nm}')
                         .form-group
                         label.col-sm-3.control-label(for='example-input-small')
                         .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[zip_cd]', value='#{company.zip_cd}')
+                            input#example-input-small.form-control.input-sm(type='text', name='company[zip_cd]', readonly value='#{company.zip_cd}')
                         .form-group
                         label.col-sm-3.control-label(for='example-input-small')
                         .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[addr]', value='#{company.addr}')
+                            input#example-input-small.form-control.input-sm(type='text', name='company[addr]', readonly value='#{company.addr}')
                         .form-group
                         label.col-sm-3.control-label(for='example-input-small')
                         .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[type]', value='#{company.type}')
+                            input#example-input-small.form-control.input-sm(type='text', name='company[type]', readonly value='#{company.type}')
                         .form-group
                         label.col-sm-3.control-label(for='example-input-small')
                         .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[telno]', value='#{company.telno}')
+                            input#example-input-small.form-control.input-sm(type='text', name='company[telno]', readonly value='#{company.telno}')
                         .form-group
                         label.col-sm-3.control-label(for='example-input-small')
                         .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[faxno]', value='#{company.faxno}')
+                            input#example-input-small.form-control.input-sm(type='text', name='company[faxno]', readonly value='#{company.faxno}')
                         .form-group
                         label.col-sm-3.control-label(for='example-input-normal') 
                         .col-sm-6
-                            input#example-input-normal.form-control.input-sm(type='text', name='company[bigo]', value='#{company.bigo}')
+                            input#example-input-normal.form-control.input-sm(type='text', name='company[bigo]', readonly value='#{company.bigo}')
 
             
