--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -13,6 +13,7 @@ html
         link(href='/layouts/sb-admin-2.css', rel='stylesheet')
         link(href='/vendor/metisMenu/metisMenu.min.css', rel='stylesheet')
         link(href='/vendor/morrisjs/morris.css', rel='stylesheet')
+        link(href='/isu/css/isu.css', rel='stylesheet')
         script(src='/vendor/jquery/jquery.min.js')
         script(src='/vendor/bootstrap-3.3.7/js/bootstrap.min.js')  
         script(src='/layouts/sb-admin-2.js')
