--- a/app/views/company/edit.jade
+++ b/app/views/company/edit.jade
@@ -1,71 +1,58 @@
 extends ../layouts/default
-block head
-    link(rel='stylesheet', href='/vendor/bootstrap-3.3.7/css/bootstrap.min.css')
-    link(rel='stylesheet', href='/vendor/bootstrap-3.3.7/css/bootstrap-theme.min.css')
-    script(src='/vendor/jquery/jquery.js')
-    script(src='/vendor/bootstrap-3.3.7/js/bootstrap.min.js')
-    script(src='/vendor/jquery/jquery.js')
-    script(src='/vendor/bootbox/bootbox.min.js')
-    script.
-        myConfirm = function(url) {
-            bootbox.confirm("sure?", function(okay) {
-                if(okay)
-                    location.href = url;
-            });
-            return false;
-        }
 
 block content
-    .masthead.clearfix
-        .inner
-            h3.masthead-brand 수정
+    .content
+        .container
+            .row(style='margin-top:20px')
+                .col-xs-12.col-sm-10.col-md-8
+                    h3.masthead-brand 회사정보 > 수정하기
+                    hr.colorgraph
             br
-            div
-            button.btn.btn-primary.btn-signup(onclick="location.href='/company/list'") List
-            button.btn.btn-primary.btn-info(onclick="location.href='/company/#{company._id}/edit'") Edit
-            button.btn.btn-primary.btn-danger(onclick="location.href='/company/#{company._id}/delete'") Delete
-            button.btn.btn-default.btn-default(onclick="alert(1)") default
-            h3
-            .row
-                .col-md-12
-                    form.form-horizontal(role='form' name='form' action='/company/#{company._id}/edit' method='post')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[com_cd]', value='#{company.com_cd}')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small') 
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[com_nm]', value='#{company.com_nm}')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[ceo_nm]', value='#{company.ceo_nm}')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[zip_cd]', value='#{company.zip_cd}')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[addr]', value='#{company.addr}')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[type]', value='#{company.type}')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[telno]', value='#{company.telno}')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[faxno]', value='#{company.faxno}')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-normal') 
-                        .col-sm-6
-                            input#example-input-normal.form-control.input-sm(type='text', name='company[bigo]', value='#{company.bigo}')
-                                
-                        button.btn.btn-success.btn-md(type='submit') Save
+            .row(style='margin-left:30px;margin-top:-15px')
+                button.btn.btn-primary.btn-sm.btn-signup(onclick="location.href='/company/list'") 목록      
+                button.btn.btn-primary.btn-sm.btn-info(onclick="location.href='/company/#{company._id}/edit'") 수정
+                button.btn.btn-primary.btn-sm.btn-danger(onclick="location.href='/company/#{company._id}/delete'") 삭제     
             br
-          
+            form.form.col-md-12.center-block(name='form' action='/company/#{company._id}/edit' method='post')     
+                .row(style='margin-left:30px')
+                    .col-xs-3.col-sm-3.col-md-3
+                        .form-group
+                            input.form-control.input-sm(type='text', name='company[com_cd]', value='#{company.com_cd}', placeholder='회사코드')
+                .row(style='margin-left:30px')
+                    .col-xs-3.col-sm-3.col-md-3
+                        .form-group
+                            input.form-control.input-sm(type='text', name='company[com_nm]', value='#{company.com_nm}', placeholder='회사명')
+                .row(style='margin-left:30px')
+                    .col-xs-3.col-sm-3.col-md-3
+                        .form-group
+                            input.form-control.input-sm(type='text', name='company[type]', value='#{company.type}',placeholder='업태')
+                .row(style='margin-left:30px')
+                    .col-xs-3.col-sm-3.col-md-3
+                        .form-group
+                            input.form-control.input-sm(type='text', name='company[ceo_nm]', value='#{company.ceo_nm}', placeholder='대표이사명')
+                .row(style='margin-left:30px')
+                    .col-xs-3.col-sm-3.col-md-3
+                        .form-group
+                            input.form-control.input-sm(type='text', name='company[telno]', value='#{company.telno}', placeholder='전화번호')
+                .row(style='margin-left:30px')
+                    .col-xs-3.col-sm-3.col-md-3
+                        .form-group
+                            input.form-control.input-sm(type='text', name='company[faxno]', value='#{company.faxno}',placeholder='팩스번호')
+                .row(style='margin-left:30px')
+                    .col-xs-3.col-sm-3.col-md-3
+                        .form-group
+                            input.form-control.input-sm(type='text', name='company[zip_cd]', value='#{company.zip_cd}',placeholder='우편번호')
+                .row(style='margin-left:30px')
+                    .col-xs-6.col-sm-6.col-md-6
+                        .form-group
+                            input.form-control.input-sm(type='text', name='company[addr]', value='#{company.addr}',placeholder='회사주소1')
+                .row(style='margin-left:30px')
+                    .col-xs-6.col-sm-6.col-md-6
+                        .form-group
+                            input.form-control.input-sm(type='text', name='company[addr2]', value='#{company.addr2}',placeholder='회사주소2')
+                .row(style='margin-left:30px')
+                    .col-xs-6.col-sm-6.col-md-6
+                        .form-group
+                            input.form-control.input-sm(type='text', name='company[bigo]', value='#{company.bigo}',placeholder='비고')
+                .row
+                    button.btn.btn-success.btn-sm(type='submit') 저장  
