--- a/app/views/company/new.jade
+++ b/app/views/company/new.jade
@@ -1,55 +1,55 @@
 extends ../layouts/default
 block head
-    link(rel='stylesheet', href='/vendor/bootstrap-3.3.7/css/bootstrap.min.css')
-    link(rel='stylesheet', href='/vendor/bootstrap-3.3.7/css/bootstrap-theme.min.css')
-    script(src='/vendor/jquery/jquery.js')
-    script(src='/vendor/bootstrap-3.3.7/js/bootstrap.min.js')
-    script(src='/vendor/jquery/jquery.js')        
-
 block content
-    .masthead.clearfix
-        .inner
-            h3.masthead-brand 회사정보관리
-            br
-            .row
-                .col-md-12
-                    form.form-horizontal(role='form' name='form' action='/company/new' method='post')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[com_cd]', placeholder='회사코드')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small') 
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[com_nm]', placeholder='회사명')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[ceo_nm]', placeholder='대표이사명')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[zip_cd]', placeholder='우편번호')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[addr]', placeholder='회사주소')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[type]', placeholder='업태')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[telno]', placeholder='전화번호')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[faxno]', placeholder='팩스번호')
-                        .form-group
-                        label.col-sm-3.control-label(for='example-input-normal') 
-                        .col-sm-6
-                            input#example-input-normal.form-control.input-sm(type='text', name='company[bigo]', placeholder='비고')
-
-                        button.btn.btn-info.btn-md(type='submit') 저장
-            br
+    .content
+            .container
+                .row(style='margin-top:20px')
+                    .col-xs-12.col-sm-10.col-md-8
+                        h3.masthead-brand 회사정보관리
+                        hr.colorgraph
+                form.form.col-md-12.center-block(name='form' action='/company/new' method='post')        
+                    .row(style='margin-top:-15px')
+                        .col-xs-1.col-sm-1.col-md-1.col-sm-offset-7.col-md-offset-7
+                            .form-group
+                                    button.btn.btn-success.btn-sm.btn-block(type='submit') 저장
+                    .row(style='margin-left:30px')
+                        .col-xs-3.col-sm-3.col-md-3
+                            .form-group
+                                input.form-control.input-sm(type='text', name='company[com_cd]', placeholder='회사코드')
+                    .row(style='margin-left:30px')
+                        .col-xs-3.col-sm-3.col-md-3
+                            .form-group
+                                input.form-control.input-sm(type='text', name='company[com_nm]', placeholder='회사명')
+                    .row(style='margin-left:30px')
+                        .col-xs-3.col-sm-3.col-md-3
+                            .form-group
+                                input.form-control.input-sm(type='text', name='company[type]', placeholder='업태')
+                    .row(style='margin-left:30px')
+                        .col-xs-3.col-sm-3.col-md-3
+                            .form-group
+                                input.form-control.input-sm(type='text', name='company[ceo_nm]', placeholder='대표이사명')
+                    .row(style='margin-left:30px')
+                        .col-xs-3.col-sm-3.col-md-3
+                            .form-group
+                                input.form-control.input-sm(type='text', name='company[telno]', placeholder='전화번호')
+                    .row(style='margin-left:30px')
+                        .col-xs-3.col-sm-3.col-md-3
+                            .form-group
+                                input.form-control.input-sm(type='text', name='company[faxno]', placeholder='팩스번호')
+                    .row(style='margin-left:30px')
+                        .col-xs-3.col-sm-3.col-md-3
+                            .form-group
+                                input.form-control.input-sm(type='text', name='company[zip_cd]', placeholder='우편번호')
+                    .row(style='margin-left:30px')
+                        .col-xs-6.col-sm-6.col-md-6
+                            .form-group
+                                input.form-control.input-sm(type='text', name='company[addr]', placeholder='회사주소1')
+                    .row(style='margin-left:30px')
+                        .col-xs-6.col-sm-6.col-md-6
+                            .form-group
+                                input.form-control.input-sm(type='text', name='company[addr2]', placeholder='회사주소2')
+                    .row(style='margin-left:30px')
+                        .col-xs-6.col-sm-6.col-md-6
+                            .form-group
+                                input.form-control.input-sm(type='text', name='company[bigo]', placeholder='비고')
+                     
