--- a/app/views/company/show.jade
+++ b/app/views/company/show.jade
@@ -1,60 +1,57 @@
 extends ../layouts/default
-block head
-    link(rel='stylesheet', href='/vendor/bootstrap-3.3.7/css/bootstrap.min.css')
-    link(rel='stylesheet', href='/vendor/bootstrap-3.3.7/css/bootstrap-theme.min.css')
-    script(src='/vendor/jquery/jquery.js')
-    script(src='/vendor/bootstrap-3.3.7/js/bootstrap.min.js')
-    script(src='/vendor/jquery/jquery.js')        
-
 
 block content
-   .masthead.clearfix
-        .inner
-            h3.masthead-brand 조회
+    .content
+        .container
+            .row(style='margin-top:20px')
+                .col-xs-12.col-sm-10.col-md-8
+                    h3.masthead-brand 회사정보 > 조회하기
+                    hr.colorgraph
             br
-            div
-            button.btn.btn-primary.btn-signup(onclick="location.href='/company/list'") List
-            button.btn.btn-primary.btn-info(onclick="location.href='/company/#{company._id}/edit'") Edit
-            button.btn.btn-primary.btn-danger(onclick="location.href='/company/#{company._id}/delete'") Delete
-            h3
-            .row
-                .col-md-12
-                    form.form-horizontal(role='form' name='form' action='/company/#{company._id}/edit' method='post')
+            .row(style='margin-left:30px;margin-top:-15px')
+                button.btn.btn-primary.btn-sm.btn-signup(onclick="location.href='/company/list'") 목록      
+                button.btn.btn-primary.btn-sm.btn-info(onclick="location.href='/company/#{company._id}/edit'") 수정
+                button.btn.btn-primary.btn-sm.btn-danger(onclick="location.href='/company/#{company._id}/delete'") 삭제
+            br
+            form.form.col-md-12.center-block
+                .row(style='margin-left:30px')
+                    .col-xs-3.col-sm-3.col-md-3
                         .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[com_cd]', readonly value='#{company.com_cd}') 
+                            input.form-control.input-sm(type='text', name='company[com_cd]', readonly value='#{company.com_cd}', placeholder='회사코드')
+                .row(style='margin-left:30px')
+                    .col-xs-3.col-sm-3.col-md-3
                         .form-group
-                        label.col-sm-3.control-label(for='example-input-small') 
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[com_nm]', readonly value='#{company.com_nm}')
+                            input.form-control.input-sm(type='text', name='company[com_nm]', readonly value='#{company.com_nm}', placeholder='회사명')
+                .row(style='margin-left:30px')
+                    .col-xs-3.col-sm-3.col-md-3
                         .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[ceo_nm]', readonly value='#{company.ceo_nm}')
+                            input.form-control.input-sm(type='text', name='company[type]', readonly value='#{company.type}',placeholder='업태')
+                .row(style='margin-left:30px')
+                    .col-xs-3.col-sm-3.col-md-3
                         .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[zip_cd]', readonly value='#{company.zip_cd}')
+                            input.form-control.input-sm(type='text', name='company[ceo_nm]', readonly value='#{company.ceo_nm}', placeholder='대표이사명')
+                .row(style='margin-left:30px')
+                    .col-xs-3.col-sm-3.col-md-3
                         .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[addr]', readonly value='#{company.addr}')
+                            input.form-control.input-sm(type='text', name='company[telno]', readonly value='#{company.telno}', placeholder='전화번호')
+                .row(style='margin-left:30px')
+                    .col-xs-3.col-sm-3.col-md-3
                         .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[type]', readonly value='#{company.type}')
+                            input.form-control.input-sm(type='text', name='company[faxno]', readonly value='#{company.faxno}',placeholder='팩스번호')
+                .row(style='margin-left:30px')
+                    .col-xs-3.col-sm-3.col-md-3
                         .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[telno]', readonly value='#{company.telno}')
+                            input.form-control.input-sm(type='text', name='company[zip_cd]', readonly value='#{company.zip_cd}',placeholder='우편번호')
+                .row(style='margin-left:30px')
+                    .col-xs-6.col-sm-6.col-md-6
                         .form-group
-                        label.col-sm-3.control-label(for='example-input-small')
-                        .col-sm-6
-                            input#example-input-small.form-control.input-sm(type='text', name='company[faxno]', readonly value='#{company.faxno}')
+                            input.form-control.input-sm(type='text', name='company[addr]', readonly value='#{company.addr}',placeholder='회사주소1')
+                .row(style='margin-left:30px')
+                    .col-xs-6.col-sm-6.col-md-6
                         .form-group
-                        label.col-sm-3.control-label(for='example-input-normal') 
-                        .col-sm-6
-                            input#example-input-normal.form-control.input-sm(type='text', name='company[bigo]', readonly value='#{company.bigo}')
-
-            
+                            input.form-control.input-sm(type='text', name='company[addr2]', readonly value='#{company.addr2}',placeholder='회사주소2')
+                .row(style='margin-left:30px')
+                    .col-xs-6.col-sm-6.col-md-6
+                        .form-group
+                            input.form-control.input-sm(type='text', name='company[bigo]', readonly value='#{company.bigo}',placeholder='비고')
+                    
