--- a/app/views/company/list.jade
+++ b/app/views/company/list.jade
@@ -5,7 +5,7 @@ block content
         .container
             .row(style='margin-top:20px')
                 .col-xs-12.col-sm-10.col-md-8
-                    h3.masthead-brand 회사리스트
+                    h3.masthead-brand 회사정보 > 목록
                     hr.colorgraph      
             .row(style='margin-top:-15px')
                 .col-xs-1.col-sm-1.col-md-1.col-sm-offset-7.col-md-offset-7
