--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -89,7 +89,7 @@ html
                                         li
                                             a(href='#') 자주묻는질문과답
                                         li
-                                            a(href='#') 처리된내용검색
+                                            a(href='/search/viewall') 처리된내용검색
                                 li.active
                                     a(href='#')
                                         i.fa.fa-th-list.fa-fw
