--- a/app/views/search/viewall.jade
+++ b/app/views/search/viewall.jade
@@ -1,8 +1,5 @@
 extends ../layouts/default
 block head
-    link(rel='stylesheet', href='/isu/css/board_style.css')
-    link(rel='stylesheet', href='/isu/css/css_style.css')
-    link(rel='stylesheet', href='/isu/css/jquery-ui.css')
 
 block content
     .content
@@ -24,28 +21,56 @@ block content
                     hr
                 .col-xs-12.col-sm-10.col-md-8 
                     .row(style='margin-left:10px; margin-top:10px')
+                        .col-md-1(style='margin-top:25px')
+                            dl.topic
+                                dt
+                                    span.wstate3 완료
+                        .col-md-9
+                            dd
+                                ol
+                                .ititle
+                                    h5.list-group-item-heading  [그룹웨어] 
+                                        Strong 
+                                            a.more_view(href='#') 전자증빙시스템 상태값 추가 요청
+                                        
+                                    2017-07-10  [박현숙과장] 
+                                br
+                                .icont
+                                    [담당자] 박선우 
+                                    p.list-group-item-text
+                                        | - 현재(변경전) : 한가지 결재조건 지정 가능
+                                        br
+                                        |  ① 그룹웨어 < 발신부서 < 수신부서(재경팀, 총무1과, 총무2과)
+                                        br
+                                        | : 현업에서 전표 발생 후 관리부서에 수신
+                                        br
+                                        |   - 개선(변경후) : 두가지 결재조건 지정 가능
+                            br
+                        .col-md-2
+                            a.more_view(href='#') 더보기
+                        hr
+                .col-xs-12.col-sm-10.col-md-8 
+                    .row(style='margin-left:10px; margin-top:10px')
                             .col-md-1(style='margin-top:25px')
-                                span.wstate2 진행
+                                dl.topic
+                                    dt
+                                        span.wstate2 진행
                             .col-md-9
                                 dd
                                     ol
                                     .ititle
                                         h5.list-group-item-heading  [그룹웨어] 
                                             Strong 
-                                                a.more_view(href='#') 전자증빙시스템 상태값 추가 요청
+                                                a.more_view(href='#') 구매 결의서 전자결재 관련
                                             
-                                        2017-04-27  [박현숙과장] 
+                                        2017-08-01  [김명수차장] 
                                     br
                                     .icont
                                         [담당자] 박선우 
                                         p.list-group-item-text
-                                            | - 현재(변경전) : 한가지 결재조건 지정 가능
+                                            | 구매 결의서 품의중 잘못 되었으면 회수해야 되는데 회수 기능이 없음.
                                             br
-                                            |  ① 그룹웨어 < 발신부서 < 수신부서(재경팀, 총무1과, 총무2과)
-                                            br
-                                            | : 현업에서 전표 발생 후 관리부서에 수신
-                                            br
-                                            |   - 개선(변경후) : 두가지 결재조건 지정 가능
+                                            | 문서를 회수할 수 있도록 요청합니다.
                                 br
                             .col-md-2
                                 a.more_view(href='#') 더보기
