--- a/app/views/search/viewall.jade
+++ b/app/views/search/viewall.jade
@@ -8,54 +8,55 @@ block content
                 .col-xs-12.col-sm-10.col-md-8
                     h3.masthead-brand 처리된 내용 > 조회하기
                     hr.colorgraph
-                .col-xs-12.col-sm-10.col-md-8    
-                    .msearch
-                        strong 검색
-                            select#search_gbn.islt(name='search_gbn', onchange='setInput(this);doView();')
-                                option(value='com') 업체
-                                option(value='cpurpose') 목적
-                                option(value='cgubun') 구분
-                                option(value='clevel') 영업단계
-                            input#search_text(type='text')
-                    .cont_area
+                    
+                .col-xs-12.col-sm-10.col-md-8   
+                    .row(style='margin-top:30px')
+                        .msearch
+                            strong 검색
+                                select#search_gbn.islt(name='search_gbn', onchange='setInput(this);doView();')
+                                    option(value='com') 업체
+                                    option(value='cpurpose') 목적
+                                    option(value='cgubun') 구분
+                                    option(value='clevel') 영업단계
+                                input#search_text(type='text')
                     hr
                 .col-xs-12.col-sm-10.col-md-8 
-                    .row(style='margin-left:10px; margin-top:10px')
-                        .col-md-1(style='margin-top:25px')
-                            dl.topic
-                                dt
-                                    span.wstate3 완료
-                        .col-md-9
-                            dd
-                                ol
-                                .ititle
-                                    h5.list-group-item-heading  [그룹웨어] 
-                                        Strong 
-                                            a.more_view(href='#') 전자증빙시스템 상태값 추가 요청
-                                        
-                                    2017-07-10  [박현숙과장] 
+                    .row(style='margin-left:20px; margin-top:10px')
+                            .col-md-2(style='margin-top:25px')
+                                dl.topic
+                                    dt
+                                        span.wstate3 완료
+                            .col-md-8
+                                dd
+                                    ol
+                                    .ititle
+                                        h5.list-group-item-heading  [그룹웨어] 
+                                            Strong 
+                                                a.more_view(href='#') 전자증빙시스템 상태값 추가 요청
+                                            
+                                        2017-07-10  [박현숙과장] 
+                                    br
+                                    .icont
+                                        [담당자] 박선우 
+                                        p.list-group-item-text
+                                            | - 현재(변경전) : 한가지 결재조건 지정 가능
+                                            br
+                                            |  ① 그룹웨어 < 발신부서 < 수신부서(재경팀, 총무1과, 총무2과)
+                                            br
+                                            | : 현업에서 전표 발생 후 관리부서에 수신
+                                            br
+                                            |   - 개선(변경후) : 두가지 결재조건 지정 가능
                                 br
-                                .icont
-                                    [담당자] 박선우 
-                                    p.list-group-item-text
-                                        | - 현재(변경전) : 한가지 결재조건 지정 가능
-                                        br
-                                        |  ① 그룹웨어 < 발신부서 < 수신부서(재경팀, 총무1과, 총무2과)
-                                        br
-                                        | : 현업에서 전표 발생 후 관리부서에 수신
-                                        br
-                                        |   - 개선(변경후) : 두가지 결재조건 지정 가능
-                            br
-                        .col-md-2
-                            a.more_view(href='#') 더보기
+                            .col-md-2
+                                a.more_view(href='#') 더보기
                         hr
                 .col-xs-12.col-sm-10.col-md-8 
-                    .row(style='margin-left:10px; margin-top:10px')
-                            .col-md-1(style='margin-top:25px')
+                    .row(style='margin-left:20px; margin-top:10px')
+                            .col-md-2(style='margin-top:25px')
                                 dl.topic
                                     dt
                                         span.wstate2 진행
-                            .col-md-9
+                            .col-md-8
                                 dd
                                     ol
                                     .ititle
@@ -71,6 +72,36 @@ block content
                                             | 구매 결의서 품의중 잘못 되었으면 회수해야 되는데 회수 기능이 없음.
                                             br
                                             | 문서를 회수할 수 있도록 요청합니다.
+                                br
+                            .col-md-2
+                                a.more_view(href='#') 더보기
+                        hr
+                .col-xs-12.col-sm-10.col-md-8 
+                    .row(style='margin-left:20px; margin-top:10px')
+                            .col-md-2(style='margin-top:25px')
+                                dl.topic
+                                    dt
+                                        span.wstate1 보류
+                            .col-md-8
+                                dd
+                                    ol
+                                    .ititle
+                                        h5.list-group-item-heading  [OPTI-HR] 
+                                            Strong 
+                                                a.more_view(href='#') 퇴사자 급여 오류(반복)
+                                            
+                                        2017-08-01  [유니드(본사)] 
+                                    br
+                                    .icont
+                                        [담당자] 조선구 
+                                        p.list-group-item-text
+                                            | 아래의 내용으로 기존에 처리된 사항이나 현재 계산 오류가 나고있습니다. 
+                                            br
+                                            | 같은 현상이 반복되지 않도록 처리 부탁드립니다.
+                                            br
+                                            | 현재) 대상자: 유리슬(7/28퇴사) 일할계산 되고 있음.
+                                            br
+                                            | 통상임금(급여, 상여, 식대) 100% 정상지급 되어야 함. 
                                 br
                             .col-md-2
                                 a.more_view(href='#') 더보기
