# KSY 상세보기 추가

--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -87,7 +87,7 @@ html
                                         li
                                             a(href='/incident') 처리진행현황
                                         li
-                                            a(href='#') 자주묻는질문과답
+                                            a(href='/search/viewdetail') 자주묻는질문과답
                                         li
                                             a(href='/search/viewall') 처리된내용검색
                                 li.active
