--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -24,6 +24,8 @@ html
         //추후 삭제(도표 표시용)
         script(src='/data/morris-data.js')
         script(src='/data/flot-data.js')
+    block head
+
 
     body
         - if(true){ //외부사용자
