--- a/app/views/company/list.jade
+++ b/app/views/company/list.jade
@@ -7,10 +7,10 @@ block content
                 .col-xs-12.col-sm-10.col-md-8
                     h3.masthead-brand 회사정보 > 목록
                     hr.colorgraph      
-            .row(style='margin-top:-15px')
-                .col-xs-1.col-sm-1.col-md-1.col-sm-offset-7.col-md-offset-7
-                    .form-group
-                        a.button.btn.btn-info.btn-sm(href='/company/new') 추가         
+            br
+            .row(style='margin-left:30px;margin-top:-15px')
+                a.button.btn.btn-primary.btn-sm(href='/company/new') 추가
+            br         
             .row
                 .col-xs-12.col-sm-10.col-md-8       
                     p.text-muted.font-13
